# IntentForgeAI

./: .env.example  .gitignore  .runtime-contract  CHANGELOG.md  LICENSE  PROJECT_CONSTITUTION.md  README.md  compose.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_postgresql_persistence_foundation.py  0002_user_identity_and_authentication_foundation.py  0003_project_domain_and_ownership_foundation.py  0004_project_intents_and_requirements_foundation.py  0005_evidence_and_source_provenance_foundation.py
apps/api/src/intentforge_api/: main.py
apps/api/src/intentforge_api/auth/: __init__.py  dependencies.py  models.py  normalization.py  passwords.py  repository.py  schemas.py  tokens.py
apps/api/src/intentforge_api/cache/: __init__.py  client.py  connection.py  namespace.py
apps/api/src/intentforge_api/core/: config.py  correlation.py  logging.py  runtime.py
apps/api/src/intentforge_api/db/: __init__.py  connection.py  engine.py  session.py
apps/api/src/intentforge_api/middleware/: correlation.py  request_logging.py
apps/api/src/intentforge_api/projects/: __init__.py  dependencies.py  errors.py  models.py  repository.py  schemas.py  service.py
apps/api/tests/: test_auth.py  test_config.py  test_correlation.py  test_database.py  test_health.py  test_identity_model.py  test_logging.py  test_passwords.py  test_project_model.py  test_project_repository.py  test_project_service.py  test_projects.py  test_readiness.py  test_redis.py  test_repository.py  test_runtime.py  test_tokens.py
(+31 files in other folders)
