[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intentforge-api"
version = "0.1.0"
description = "Backend API for the IntentForge AI platform"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0"
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.25,<1.0",
    "ruff>=0.11,<1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/intentforge_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
